--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  background-color: black;
+  background-color: rgba(0, 0, 0, .3);
   opacity: .3;
   position: absolute;
   top: 0;
