--- a/pages/index.css
+++ b/pages/index.css
@@ -24,6 +24,7 @@
 @import url(../blocks/popup/__name-zone/popup__name-zone.css);
 @import url(../blocks/popup/__info-zone/popup__info-zone.css);
 @import url(../blocks/popup/__text/popup__text.css);
+@import url(../blocks/popup/__text-info/popup__text-info.css);
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__button-text/popup__button-text.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
