--- a/blocks/element/__footer/element__footer.css
+++ b/blocks/element/__footer/element__footer.css
@@ -1,11 +1,20 @@
-.element__footer{
+.element__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   max-width: 246px;
   width: 100%;
   height: 23px;
-  align-items:center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-left: 21px;
   margin-top: 25px;
   margin-right: 20px;
