--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,11 +1,18 @@
-.elements{
+.elements {
+  display: -ms-grid;
   display: grid;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
-  grid-template-columns:282px 282px 282px;
+  -ms-grid-columns: 282px 17px 282px 17px 282px;
+  grid-template-columns: 282px 282px 282px;
+  -ms-grid-rows: 361px 20px 361px;
   grid-template-rows: repeat(2, 361px);
   grid-template-areas:
-  "element element element"
-  "element element element";
+    "element element element"
+    "element element element";
+  -webkit-column-gap: 17px;
+  -moz-column-gap: 17px;
   column-gap: 17px;
   row-gap: 20px;
   max-width: 880px;
@@ -14,13 +21,17 @@
 }
 
 @media screen and (max-width: 940px) {
-  .elements{
+  .elements {
+    -ms-grid-columns: 282px 5px 282px;
     grid-template-columns: 282px 282px;
+    -ms-grid-rows: 361px 20px 361px 20px 361px;
     grid-template-rows: repeat(3, 361px);
     grid-template-areas:
-    "element element"
-    "element element"
-    "element element";
+      "element element"
+      "element element"
+      "element element";
+    -webkit-column-gap: 5px;
+    -moz-column-gap: 5px;
     column-gap: 5px;
     row-gap: 20px;
     margin-left: auto;
@@ -29,16 +40,18 @@
 }
 
 @media screen and (max-width: 550px) {
-  .elements{
+  .elements {
+    -ms-grid-columns: 282px;
     grid-template-columns: 282px;
+    -ms-grid-rows: 361px 20px 361px 20px 361px 20px 361px 20px 361px 20px 361px;
     grid-template-rows: repeat(6, 361px);
     grid-template-areas:
-    "element"
-    "element"
-    "element"
-    "element"
-    "element"
-    "element";
+      "element"
+      "element"
+      "element"
+      "element"
+      "element"
+      "element";
     row-gap: 20px;
     max-width: 282px;
     margin-left: auto;
