--- a/blocks/grid-container/grid-container.css
+++ b/blocks/grid-container/grid-container.css
@@ -1,12 +1,13 @@
-.container{
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  /*grid-template-columns: 880px;
-  grid-template-rows: 74px 120px 744px;
-  grid-template-areas:
-  "header"
-  "profile"
-  "elements";*/
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   margin: auto;
 }
