--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,8 @@
-.popup{
+.popup {
   display: none;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
   width: 100%;
   height: 100%;
@@ -13,4 +16,10 @@
   left: 0;
   margin: auto;
   z-index: 1;
+}
+
+@media screen and (max-width: 425px) {
+  .popup {
+    width: 282px;
+  }
 }
