--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -3,11 +3,13 @@
   width: 150px;
   height: 50px;
   margin-left: auto;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   background-image: url(../../img/Vector_add-button.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-color:black;
+  background-color: black;
 }
 
 .add-button:hover {
