--- a/blocks/avatar/avatar.css
+++ b/blocks/avatar/avatar.css
@@ -1,13 +1,17 @@
-.avatar{
+.avatar {
   border-radius: 50%;
   max-width: 120px;
   max-height: 120px;
+  -ms-flex-item-align: start;
+  -ms-grid-row-align: start;
   align-self: start;
 }
 
 
 @media screen and (max-width: 425px) {
-  .avatar{
+  .avatar {
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
     align-self: center;
   }
 }
