--- a/blocks/element/__text/element__text.css
+++ b/blocks/element/__text/element__text.css
@@ -2,14 +2,19 @@
   font-weight: 900;
   font-size: 24px;
   color: black;
+  -webkit-margin-before: 0;
   margin-block-start: 0;
+  -webkit-margin-after: 0;
   margin-block-end: 0;
+  -webkit-margin-start: 0;
   margin-inline-start: 0;
+  -webkit-margin-end: 0;
   margin-inline-end: 0;
   line-height: 24px;
   width: 190px;
   white-space: nowrap;
   overflow: hidden;
+  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   padding: 1px;
 }
