--- a/blocks/footer__copyright/footer__copyright.css
+++ b/blocks/footer__copyright/footer__copyright.css
@@ -1,10 +1,21 @@
 .footer__copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
+  -webkit-margin-before: 0;
   margin-block-start: 0;
+  -webkit-margin-after: 0;
   margin-block-end: 0;
+  -webkit-margin-start: 0;
   margin-inline-start: 0;
+  -webkit-margin-end: 0;
   margin-inline-end: 0;
   max-width: 318px;
   max-height: 18px;
@@ -20,6 +31,8 @@
 @media screen and (max-width: 1024px) {
   .footer__copyright {
     margin-left: auto;
+    -ms-flex-item-align: start;
+    -ms-grid-row-align: start;
     align-self: start;
   }
 }
