--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,17 @@
-.header{
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
-  justify-content:flex-start;
-  align-items:flex-start;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
   margin-left: 200px;
   margin-right: 200px;
   margin-top: 45px;
@@ -12,7 +21,7 @@
 }
 
 @media screen and (max-width: 800px) {
-  .header{
+  .header {
     margin-left: 50px;
     margin-right: 50px;
   }
@@ -20,7 +29,7 @@
 
 
 @media screen and (max-width: 425px) {
-  .header{
+  .header {
     max-width: 320px;
     width: 100%;
     height: 56px;
