--- a/blocks/popup/__name-zone/popup__name-zone.css
+++ b/blocks/popup/__name-zone/popup__name-zone.css
@@ -1,6 +1,13 @@
 .popup__name-zone {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
   height: 27px;
   margin-top: 54px;
@@ -9,5 +16,4 @@
   border: none;
   padding: 0;
   border-bottom: solid rgba(84, 84, 84, 1) 1px;
-
 }
