--- a/blocks/profile-info/__data/profile-info__data.css
+++ b/blocks/profile-info/__data/profile-info__data.css
@@ -1,19 +1,28 @@
-.profile-info__data{
+.profile-info__data {
   font-weight: normal;
   font-size: 18px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-margin-before: 0;
   margin-block-start: 0;
+  -webkit-margin-after: 0;
   margin-block-end: 0;
+  -webkit-margin-start: 0;
   margin-inline-start: 0;
+  -webkit-margin-end: 0;
   margin-inline-end: 0;
 }
 
 
 @media screen and (max-width: 425px) {
-  .profile-info__data{
-     font-size: 14px;
-     align-items: center;
-     margin-left: 7px;
+  .profile-info__data {
+    font-size: 14px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-left: 7px;
   }
 }
