--- a/blocks/profile-info/__edit-button/profile-info__edit-button.css
+++ b/blocks/profile-info/__edit-button/profile-info__edit-button.css
@@ -1,4 +1,6 @@
-.profile-info__edit-button{
+.profile-info__edit-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 24px;
   height: 24px;
@@ -6,20 +8,24 @@
   background-image: url(../../../img/Vector.png);
   background-repeat: no-repeat;
   background-position: center;
+  -webkit-margin-before: 0;
   margin-block-start: 0;
+  -webkit-margin-after: 0;
   margin-block-end: 0;
+  -webkit-margin-start: 0;
   margin-inline-start: 0;
+  -webkit-margin-end: 0;
   margin-inline-end: 0;
 }
 
-.profile-info__edit-button:hover{
+.profile-info__edit-button:hover {
   border: solid 1px rgba(196, 196, 196, 1);
   background-image: url(../../../img/Vector-gray.png);
   cursor: pointer;
 }
 
 @media screen and (max-width: 425px) {
-  .profile-info__edit-button{
+  .profile-info__edit-button {
     width: 18px;
     height: 18px;
   }
