--- a/blocks/profile-info/__text/profile-info__text.css
+++ b/blocks/profile-info/__text/profile-info__text.css
@@ -1,26 +1,33 @@
-.profile-info__text{
+.profile-info__text {
   font-weight: 700;
   font-size: 42px;
   line-height: 48px;
   width: 294px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-margin-before: 0;
   margin-block-start: 0;
+  -webkit-margin-after: 0;
   margin-block-end: 0;
+  -webkit-margin-start: 0;
   margin-inline-start: 0;
+  -webkit-margin-end: 0;
   margin-inline-end: 0;
 }
 
 
 @media screen and (max-width: 720px) {
-  .profile-info__text{
+  .profile-info__text {
     font-size: 23px;
   }
 }
 
 
 @media screen and (max-width: 425px) {
-  .profile-info__text{
+  .profile-info__text {
     font-size: 27px;
     line-height: auto;
   }
