--- a/blocks/profile-info/__text/profile-info__text.css
+++ b/blocks/profile-info/__text/profile-info__text.css
@@ -1,7 +1,7 @@
 .profile-info__text {
   font-weight: 700;
   font-size: 42px;
-  line-height: 48px;
+  max-height: 48px;
   width: 294px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -29,6 +29,5 @@
 @media screen and (max-width: 425px) {
   .profile-info__text {
     font-size: 27px;
-    line-height: auto;
   }
 }
