--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,4 @@
-.footer__copyright {
+.footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -29,7 +29,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .footer__copyright {
+  .footer {
     margin-left: auto;
     -ms-flex-item-align: start;
     -ms-grid-row-align: start;
@@ -38,7 +38,7 @@
 }
 
 @media screen and (max-width: 425px) {
-  .footer__copyright {
+  .footer {
     margin-left: 19px;
     margin-top: 48px;
   }
