--- a/blocks/popup-container/__info-zone/popup-container__info-zone.css
+++ b/blocks/popup-container/__info-zone/popup-container__info-zone.css
@@ -1,4 +1,16 @@
-.popup__name-zone {
+.popup-container__info-zone {
+  -webkit-margin-start: 0;
+  margin-inline-start: 0;
+  -webkit-margin-end: 0;
+  margin-inline-end: 0;
+  -webkit-padding-before: 0;
+  padding-block-start: 0;
+  -webkit-padding-start: 0;
+  padding-inline-start: 0;
+  -webkit-padding-end: 0;
+  padding-inline-end: 0;
+  -webkit-padding-after: 0;
+  padding-block-end: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10,7 +22,7 @@
   -ms-flex-pack: start;
   justify-content: flex-start;
   height: 27px;
-  margin-top: 54px;
+  margin-top: 30px;
   margin-left: 36px;
   margin-right: 36px;
   border: none;
