--- a/blocks/popup-container/__title/popup-container__title.css
+++ b/blocks/popup-container/__title/popup-container__title.css
@@ -1,4 +1,4 @@
-.popup__title {
+.popup-container__title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -19,7 +19,7 @@
 }
 
 @media screen and (max-width: 425px) {
-  .popup__title {
+  .popup-container__title {
     font-weight: 700;
     font-size: 15px;
   }
