--- a/blocks/popup-container/popup-container.css
+++ b/blocks/popup-container/popup-container.css
@@ -1,4 +1,4 @@
-.popup__container {
+.popup-container {
   display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -22,7 +22,7 @@
 }
 
 @media screen and (max-width: 425px) {
-  .popup__container {
+  .popup-container {
     max-width: 282px;
     height: 322px;
   }
