--- a/pages/index.css
+++ b/pages/index.css
@@ -18,15 +18,15 @@
 @import url(../blocks/element/__text/element__text.css);
 @import url(../blocks/element/__heart/element__heart.css);
 @import url(../blocks/element/__heart_active/element__heart_active.css);
-@import url(../blocks/footer__copyright/footer__copyright.css);
-@import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/__name-zone/popup__name-zone.css);
-@import url(../blocks/popup/__info-zone/popup__info-zone.css);
-@import url(../blocks/popup/__text/popup__text.css);
-@import url(../blocks/popup/__text-info/popup__text-info.css);
-@import url(../blocks/popup/__button/popup__button.css);
-@import url(../blocks/popup/__button-text/popup__button-text.css);
-@import url(../blocks/popup/__close-button/popup__close-button.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/popup-container/popup-container.css);
+@import url(../blocks/popup-container/__title/popup-container__title.css);
+@import url(../blocks/popup-container/__name-zone/popup-container__name-zone.css);
+@import url(../blocks/popup-container/__info-zone/popup-container__info-zone.css);
+@import url(../blocks/popup-container/__text/popup-container__text.css);
+@import url(../blocks/popup-container/__text-info/popup-container__text-info.css);
+@import url(../blocks/popup-container/__button/popup-container__button.css);
+@import url(../blocks/popup-container/__button-text/popup-container__button-text.css);
+@import url(../blocks/popup-container/__close-button/popup-container__close-button.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/popup_opened/popup_opened.css);
