--- a/blocks/element/__footer/element__footer.css
+++ b/blocks/element/__footer/element__footer.css
@@ -11,7 +11,7 @@
   justify-content: space-between;
   max-width: 246px;
   width: 100%;
-  height: 23px;
+  max-height: 23px;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
