--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,5 @@
 .page {
+  font-family: 'Inter', Arial, sans-serif;
   background-color: rgba(0, 0, 0, 1);
   max-width: 1280px;
   min-width: 320px;
