--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -26,12 +26,12 @@
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 500px) {
   .add-button {
-    margin-top: 32px;
+    margin-top: 36px;
     max-width: 282px;
+    min-height: 50px;
     width: 100%;
-    height: 50px;
     margin-left: 0;
     margin-right: 0;
   }
