--- a/blocks/profile-info/__data/profile-info__data.css
+++ b/blocks/profile-info/__data/profile-info__data.css
@@ -6,6 +6,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 282px;
   -webkit-margin-before: 0;
   margin-block-start: 0;
   -webkit-margin-after: 0;
@@ -17,12 +18,13 @@
 }
 
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 500px) {
   .profile-info__data {
     font-size: 14px;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    margin-left: 7px;
+    justify-content: center;
+
   }
 }
