--- a/blocks/profile-info/profile-info.css
+++ b/blocks/profile-info/profile-info.css
@@ -31,6 +31,7 @@
   .profile-info>*:nth-child(1) {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
+    margin-left: 46px;
   }
 
   .profile-info>*:nth-child(2) {
@@ -46,5 +47,11 @@
   .profile-info>*:nth-child(4) {
     -ms-grid-row: 2;
     -ms-grid-column: 2;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .profile-info {
+    row-gap: 14px;
   }
 }
