--- a/blocks/element/__heart/element__heart.css
+++ b/blocks/element/__heart/element__heart.css
@@ -2,6 +2,8 @@
   width: 22px;
   height: 19px;
   background-image: url(../../../img/heart.png);
+  border: none;
+  background-color: white;
 }
 
 .element__heart:hover{
