--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,6 +4,7 @@
   max-width: 1280px;
   min-width: 320px;
   margin: 0 auto;
+  border: green solid 1px;
 }
 
 @media screen and (max-width: 425px) {
