--- a/blocks/profile-info/__data/profile-info__data.css
+++ b/blocks/profile-info/__data/profile-info__data.css
@@ -3,9 +3,6 @@
   font-size: 18px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   width: 282px;
   -webkit-margin-before: 0;
   margin-block-start: 0;
@@ -15,6 +12,11 @@
   margin-inline-start: 0;
   -webkit-margin-end: 0;
   margin-inline-end: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  padding: 1px;
 }
 
 
