--- a/blocks/profile-info/__text/profile-info__text.css
+++ b/blocks/profile-info/__text/profile-info__text.css
@@ -1,12 +1,9 @@
 .profile-info__text {
   font-weight: 700;
   font-size: 42px;
-  width: 294px;
+  max-width: 294px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-margin-before: 0;
   margin-block-start: 0;
   -webkit-margin-after: 0;
@@ -15,6 +12,11 @@
   margin-inline-start: 0;
   -webkit-margin-end: 0;
   margin-inline-end: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  padding: 1px;
 }
 
 
