--- a/blocks/profile/__data/profile__data.css
+++ b/blocks/profile/__data/profile__data.css
@@ -1,9 +1,9 @@
-.profile-info__text {
-  font-weight: 700;
-  font-size: 42px;
-  max-width: 294px;
+.profile__data {
+  font-weight: normal;
+  font-size: 18px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  width: 282px;
   -webkit-margin-before: 0;
   margin-block-start: 0;
   -webkit-margin-after: 0;
@@ -20,15 +20,13 @@
 }
 
 
-@media screen and (max-width: 720px) {
-  .profile-info__text {
-    font-size: 23px;
-  }
-}
-
-
 @media screen and (max-width: 500px) {
-  .profile-info__text {
-    font-size: 27px;
+  .profile__data {
+    font-size: 14px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    justify-content: center;
+
   }
 }
