--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,4 @@
-.profile-info__edit-button {
+.profile__edit-button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -21,14 +21,14 @@
   margin-top: 5px;
 }
 
-.profile-info__edit-button:hover {
+.profile__edit-button:hover {
   border: solid 1px rgba(196, 196, 196, 1);
   background-image: url(../../../img/Vector-gray.png);
   cursor: pointer;
 }
 
 @media screen and (max-width: 500px) {
-  .profile-info__edit-button {
+  .profile__edit-button {
     width: 18px;
     height: 18px;
   }
