style:avatar into profile

--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,4 +1,4 @@
-.avatar {
+.profile__avatar {
   border-radius: 50%;
   max-width: 120px;
   max-height: 120px;
@@ -9,7 +9,7 @@
 
 
 @media screen and (max-width: 500px) {
-  .avatar {
+  .profile__avatar {
     -ms-flex-item-align: center;
     -ms-grid-row-align: center;
     align-self: center;
