--- a/pages/index.css
+++ b/pages/index.css
@@ -7,7 +7,7 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/logo/_place/logo_place_header.css);
 @import url(../blocks/profile/profile.css);
-@import url(../blocks/avatar/avatar.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile-info.css);
 @import url(../blocks/profile/__text/profile__text.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
