--- a/blocks/popup-container/__text/popup-container__text.css
+++ b/blocks/popup-container/__text/popup-container__text.css
@@ -1,12 +1,8 @@
 .popup-container__text {
   display: block;
-  -webkit-margin-before: 0;
   margin-block-start: 0;
-  -webkit-margin-after: 0;
   margin-block-end: 0;
-  -webkit-margin-start: 0;
   margin-inline-start: 0;
-  -webkit-margin-end: 0;
   margin-inline-end: 0;
   font-weight: normal;
   font-family: 'Inter', Arial, sans-serif;
@@ -15,4 +11,5 @@
   margin-bottom: 13px;
   border: none;
   padding: 0;
+  height: 27px;
 }
