--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -19,6 +19,7 @@
   border: 1px solid white;
   background-color: black;
   margin-top: 10px;
+  margin-left: 10px;
 }
 
 .profile__edit-button:hover {
@@ -27,7 +28,7 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1100px) {
   .profile__edit-button {
     width: 18px;
     height: 18px;
