--- a/blocks/popup-container/__title/popup-container__title.css
+++ b/blocks/popup-container/__title/popup-container__title.css
@@ -2,13 +2,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  justify-content: flex-start;
   margin-top: 34px;
   margin-left: 36px;
   margin-right: 64px;
