--- a/blocks/profile/__data/profile__data.css
+++ b/blocks/profile/__data/profile__data.css
@@ -20,13 +20,14 @@
 }
 
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1100px) {
   .profile__data {
     font-size: 14px;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
     justify-content: center;
+    margin-left: 63px;
 
   }
 }
