--- a/blocks/profile/__info/profile-info.css
+++ b/blocks/profile/__info/profile-info.css
@@ -20,12 +20,14 @@
   color: white;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1100px) {
   .profile-info {
     -ms-grid-columns: 220px 24px;
     grid-template-columns: 220px 24px;
     -ms-grid-rows: 39px 18px;
     grid-template-rows: 39px 18px;
+    row-gap: 0;
+    margin-left: 0;
   }
 
   .profile-info>*:nth-child(1) {
@@ -50,8 +52,9 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+/*@media screen and (max-width: 500px) {
   .profile-info {
-    row-gap: 14px;
+
   }
 }
+*/
