--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -20,15 +20,15 @@
 }
 
 
-@media screen and (max-width: 720px) {
-  .profile__text {
-    font-size: 23px;
-  }
-}
-
-
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1100px) {
   .profile__text {
     font-size: 27px;
   }
 }
+
+/*
+@media screen and (max-width: 500px) {
+  .profile__text {
+    font-size: 27px;
+  }
+}*/
