--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,14 +2,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
   justify-content: flex-start;
-  align-items:center;
+  align-items: center;
   margin-left: 200px;
   margin-right: auto;
   margin-top: 40px;
@@ -18,21 +13,22 @@
   height: 120px;
 }
 
-@media screen and (max-width: 500px) {
+
+@media screen and (max-width: 1100px) {
   .profile {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     margin-top: 42px;
     margin-bottom: 36px;
     max-width: 282px;
     height: 286px;
+    margin-left: auto;
+  }
+}
+
+
+@media screen and (max-width: 425px) {
+  .profile {
+    margin-left: 19px;
   }
 }
