--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,14 +2,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  background-image: url(../../img/Rectangle.png);
+  background: url(../../img/Rectangle.png);
   background-size: cover;
   border-radius: 10px;
   max-width: 281px;
