--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -16,7 +16,7 @@
   margin-right: 200px;
   margin-top: 45px;
   max-width: 880px;
-  height: 74px;
+  min-height: 74px;
   border-bottom: solid rgba(84, 84, 84, 1) 1px;
 }
 
@@ -32,7 +32,7 @@
   .header {
     max-width: 320px;
     width: 100%;
-    height: 55px;
+    min-height: 55px;
     margin-bottom: 42px;
     margin-left: 0;
   }
