--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -5,27 +5,25 @@
   width: 24px;
   height: 24px;
   border: solid 1px white;
-  background-image: url(../../../img/Vector.png);
+  background-image: url(../../../img/Edit_Button.svg);
   background-repeat: no-repeat;
   background-position: center;
-  -webkit-margin-before: 0;
   margin-block-start: 0;
-  -webkit-margin-after: 0;
   margin-block-end: 0;
-  -webkit-margin-start: 0;
   margin-inline-start: 0;
-  -webkit-margin-end: 0;
   margin-inline-end: 0;
   border: 1px solid white;
   background-color: black;
   margin-top: 10px;
   margin-left: 10px;
+  transition: all 0.2s ease;
 }
 
 .profile__edit-button:hover {
   border: solid 1px rgba(196, 196, 196, 1);
-  background-image: url(../../../img/Vector-gray.png);
+  background-image: url(../../../img/Edit_Button_Hover.svg);
   cursor: pointer;
+  opacity: .5;
 }
 
 @media screen and (max-width: 1100px) {
