--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,15 +2,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
   justify-content: flex-start;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
   align-items: flex-start;
   margin-left: 200px;
   margin-right: 200px;
@@ -35,5 +28,6 @@
     min-height: 55px;
     margin-bottom: 42px;
     margin-left: 0;
+    margin-right: 0;
   }
 }
