--- a/blocks/popup-container/__close-button/popup-container__close-button.css
+++ b/blocks/popup-container/__close-button/popup-container__close-button.css
@@ -14,3 +14,10 @@
   cursor: pointer;
   opacity: 0.5;
 }
+
+@media screen and (max-width: 1000px) {
+  .popup-container__close-button{
+    width: 20px;
+    height: 20px;
+  }
+}
