--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -16,9 +16,9 @@
   margin: auto;
   z-index: 1;
 }
-
+/*
 @media screen and (max-width: 425px) {
   .popup {
-    width: 282px;
+    width: 100%;
   }
 }
