--- a/blocks/profile/__data/profile__data.css
+++ b/blocks/profile/__data/profile__data.css
@@ -1,20 +1,14 @@
 .profile__data {
   font-weight: normal;
   font-size: 18px;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 282px;
-  -webkit-margin-before: 0;
   margin-block-start: 0;
-  -webkit-margin-after: 0;
   margin-block-end: 0;
-  -webkit-margin-start: 0;
   margin-inline-start: 0;
-  -webkit-margin-end: 0;
   margin-inline-end: 0;
   white-space: nowrap;
   overflow: hidden;
-  -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   padding: 1px;
 }
@@ -23,11 +17,9 @@
 @media screen and (max-width: 1100px) {
   .profile__data {
     font-size: 14px;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     justify-content: center;
     margin-left: 63px;
-
+    width: calc( 100% - 63px );
   }
 }
