--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -11,6 +11,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 1px;
+  margin-bottom: -10px;
 }
 
 
@@ -20,9 +21,3 @@
   }
 }
 
-/*
-@media screen and (max-width: 500px) {
-  .profile__text {
-    font-size: 27px;
-  }
-}*/
