--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -14,6 +14,12 @@
   margin-right: auto;
 }
 
+@media screen and (max-width: 1100px) {
+  .elements {
+    margin-left: 100px;
+  }
+}
+
 @media screen and (max-width: 1000px) {
   .elements {
     grid-template-columns: 282px 282px;
