--- a/blocks/profile/__data/profile__data.css
+++ b/blocks/profile/__data/profile__data.css
@@ -2,7 +2,7 @@
   font-weight: normal;
   font-size: 18px;
   box-sizing: border-box;
-  width: 282px;
+  max-width: 282px;
   margin-block-start: 0;
   margin-block-end: 0;
   margin-inline-start: 0;
