--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -1,7 +1,7 @@
 .profile__text {
   font-weight: 700;
   font-size: 42px;
-  width: 300px;
+  max-width: 300px;
   box-sizing: border-box;
   margin-block-start: 0;
   margin-block-end: 0;
