--- a/blocks/profile/__data/profile__data.css
+++ b/blocks/profile/__data/profile__data.css
@@ -19,6 +19,7 @@
     font-size: 14px;
     align-items: center;
     justify-content: center;
-    margin-left: 50px;
+    margin-left: auto;
+    max-width: 280px;
   }
 }
