--- a/blocks/profile/__info/profile-info.css
+++ b/blocks/profile/__info/profile-info.css
@@ -13,6 +13,7 @@
   height: 100%;
   margin-left: 30px;
   color: white;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1100px) {
@@ -26,14 +27,9 @@
   .profile-info>*:nth-child(1) {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
-    margin-left: calc( 100% - 189px );
     column-gap: 10px;
   }
 
-  .profile-info>*:nth-child(2) {
-    -ms-grid-row: 1;
-    -ms-grid-column: 2;
-  }
 
   .profile-info>*:nth-child(3) {
     -ms-grid-row: 2;
