--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -12,12 +12,14 @@
   text-overflow: ellipsis;
   padding: 1px;
   margin-bottom: -10px;
+  margin-left: 20px;
 }
 
 
 @media screen and (max-width: 1100px) {
   .profile__text {
     font-size: 27px;
+    max-width: 282px;
   }
 }
 
