--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -11,6 +11,7 @@
   margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
+  border: 1px solid white;
   background-color: black;
   margin-top: 10px;
   margin-left: 10px;
