--- a/blocks/popup-container/__close-button/popup-container__close-button.css
+++ b/blocks/popup-container/__close-button/popup-container__close-button.css
@@ -5,7 +5,7 @@
   right: -40px;
   margin: auto;
   z-index: 1000;
-  background-color:  rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.1);
   border: none;
   transition: all 0.2s ease;
 }
@@ -16,8 +16,12 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .popup-container__close-button{
+  .popup-container__close-button {
     width: 20px;
     height: 20px;
+    top: 5;
+    right: 0;
+    margin: 0 auto;
+    margin-right: 19px;
   }
 }
