--- a/blocks/popup/__button-text/popup__button-text.css
+++ b/blocks/popup/__button-text/popup__button-text.css
@@ -1,15 +1,15 @@
-.popup-container__text {
+.popup__button-text {
   display: block;
+  -webkit-margin-before: 0;
   margin-block-start: 0;
+  -webkit-margin-after: 0;
   margin-block-end: 0;
+  -webkit-margin-start: 0;
   margin-inline-start: 0;
+  -webkit-margin-end: 0;
   margin-inline-end: 0;
   font-weight: normal;
+  font-size: 18px;
+  color: white;
   font-family: 'Inter', Arial, sans-serif;
-  font-size: 14px;
-  color: black;
-  margin-bottom: 13px;
-  border: none;
-  padding: 0;
-  height: 27px;
 }
