--- a/blocks/popup/__close-button-icon/popup__close-button-icon.css
+++ b/blocks/popup/__close-button-icon/popup__close-button-icon.css
@@ -1,16 +1,16 @@
-.popup-container__close-button-icon{
+.popup__close-button-icon{
   width: 32px;
   height: 32px;
 }
 
-.popup-container__close-button:hover {
+.popup__close-button:hover {
   cursor: pointer;
   opacity: 0.5;
 }
 
 
 @media screen and (max-width: 1000px) {
-  .popup-container__close-button-icon {
+  .popup__close-button-icon {
     width: 20px;
     height: 20px;
     top: 5;
