--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,4 +1,4 @@
-.popup-container__title {
+.popup__title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10,11 +10,17 @@
   color: black;
   font-weight: 900;
   font-size: 24px;
+  margin-bottom: 54px;
 }
 
 @media screen and (max-width: 1000px) {
-  .popup-container__title {
-    font-weight: 700;
-    font-size: 15px;
+  .popup__title {
+    font-size: 18px;
+    margin-top: 25px;
+    margin-left: 22px;
+    margin-right: 22px;
+    margin-bottom: 75px;
+
+
   }
 }
