--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,7 @@
   height: 100%;
   text-align: center;
   background-color: rgba(0, 0, 0, .3);
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
