--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -38,5 +38,6 @@
     margin-top: 36px;
     margin-left: 0;
     margin-right: 0;
+    background-image: url(../../../img/AddButtonMobileVersion.svg);
   }
 }
