--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -2,15 +2,17 @@
   font-weight: 700;
   font-size: 42px;
   max-width: 300px;
+  min-width: 294px;
   box-sizing: border-box;
   margin-block-start: 0;
   margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
+  margin: 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 1px;
+  padding: 0;
   margin-bottom: -10px;
 
 }
@@ -19,7 +21,7 @@
 @media screen and (max-width: 1100px) {
   .profile__text {
     font-size: 27px;
-    max-width: 282px;
+    max-width: 294px;
     min-width: 210px;
     margin-left: 30px;
   }
