--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -4,7 +4,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: url(../../img/Rectangle.png);
   border-radius: 10px;
   max-width: 281px;
+  height: 361px;
+  width: 282px;
+  background-color:white;
+  border: 0;
 }
