--- a/blocks/popup/__info-zone/popup__info-zone.css
+++ b/blocks/popup/__info-zone/popup__info-zone.css
@@ -5,7 +5,6 @@
   padding-inline-start: 0;
   padding-inline-end: 0;
   padding-block-end: 0;
-  display: -ms-flexbox;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -13,5 +12,15 @@
   margin-right: 36px;
   border: none;
   padding: 0;
-  border-bottom: solid rgba(84, 84, 84, 1) 1px;
+  border-bottom: solid rgba(84, 84, 84, .5) 1px;
+  max-width: 358px;
+}
+
+@media screen and (max-width: 1000px) {
+  .popup__info-zone {
+  width: 238px;
+  margin-left: auto;
+  margin-right: auto;
+  align-self: center;
+  }
 }
