--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -16,11 +16,8 @@
 
 .profile__add-button:hover {
   cursor: pointer;
-  background-image: url(../../../img/AddButtonHover.svg);
+  opacity: .7;
   border: solid 2px gray;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 20px 20px;
 }
 
 
