--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -9,8 +9,6 @@
     "profile__data .";
   max-width: 336px;
   width: 100%;
-  max-height: 73px;
-  height: 100%;
   margin-left: 30px;
   color: white;
 
@@ -23,8 +21,8 @@
     row-gap: 0;
     margin-left: 0;
   }
-
-  .profile__info>*:nth-child(1) {
+}
+  /*.profile__info>*:nth-child(1) {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
     column-gap: 10px;
@@ -41,4 +39,4 @@
     -ms-grid-column: 2;
   }
 }
-
+*/
