--- a/blocks/popup/__info-zone/popup__info-zone.css
+++ b/blocks/popup/__info-zone/popup__info-zone.css
@@ -18,7 +18,7 @@
 
 @media screen and (max-width: 1000px) {
   .popup__info-zone {
-  width: 238px;
+  max-width: 238px;
   margin-left: auto;
   margin-right: auto;
   align-self: center;
