--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,27 +3,26 @@
   flex-direction: column;
   width: 100%;
   max-width: 430px;
-  max-height: 330px;
+  /*max-height: 330px;*/
   text-align: center;
   border-radius: 10px;
   background-color: white;
   position: absolute;
-  top: 0;
+  /*top: 0;*/
   right: 0;
-  bottom: 0;
+  /*bottom: 0;*/
   left: 0;
   margin: auto;
   margin-top: 263px;
   z-index: 1000;
   opacity: 1;
-
+  margin-bottom: 123px;
 }
 
 @media screen and (max-width: 1000px) {
   .popup__container {
     margin-top: 123px;
     max-width: 282px;
-    max-height: 322px;
+    /*max-height: 322px;*/
   }
 }
-
