--- a/blocks/popup/__info-zone/popup__info-zone.css
+++ b/blocks/popup/__info-zone/popup__info-zone.css
@@ -18,9 +18,10 @@
 
 @media screen and (max-width: 1000px) {
   .popup__info-zone {
-  max-width: 238px;
-  margin-left: auto;
-  margin-right: auto;
-  align-self: center;
+    max-width: 283px;
+    margin-left: 22px;
+    margin-right: 22px;
+    align-self: center;
+    margin-top: 30px;
   }
 }
