--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -13,7 +13,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 0;
-  min-height: 45px;
+  /*min-height: 45px;*/
   vertical-align: text-top;
 }
 
@@ -32,4 +32,3 @@
     margin-left: 50px;
   }
 }
-
