--- a/blocks/popup/__info-zone/popup__info-zone.css
+++ b/blocks/popup/__info-zone/popup__info-zone.css
@@ -10,6 +10,7 @@
   justify-content: flex-start;
   margin-left: 36px;
   margin-right: 36px;
+  margin-top: 30px;
   border: none;
   padding: 0;
   border-bottom: solid rgba(84, 84, 84, .5) 1px;
