--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -12,7 +12,7 @@
   padding: 0;
   height: 27px;
   width: 358px;
-  margin-top: 13px;
+  margin-top: 0;
 }
 
 @media screen and (max-width: 1000px) {
