--- a/blocks/element/__heart/element__heart.css
+++ b/blocks/element/__heart/element__heart.css
@@ -1,7 +1,7 @@
 .element__heart {
   width: 22px;
   height: 19px;
-  background-image: url(../../../img/heart.svg);
+  /*background-image: url(../../../img/heart.svg);*/
   border: none;
   background-color: white;
   transition: all 0.2s ease;
