--- a/pages/index.css
+++ b/pages/index.css
@@ -38,6 +38,7 @@
 @import url(../blocks/popup-location/__text/popup-location__text.css);
 @import url(../blocks/popup-location/__title/popup-location__title.css);
 @import url(../blocks/popup-location/popup-location.css);
+@import url(../blocks/element/__heart-icon/element__heart-icon.css);
 
 @import url(../blocks/popup/_opened/popup_opened.css);
 
