--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 5%;
   max-width: 281px;
   width: 282px;
   background-color: white;
