--- a/pages/index.css
+++ b/pages/index.css
@@ -39,6 +39,11 @@
 @import url(../blocks/popup-location/__title/popup-location__title.css);
 @import url(../blocks/popup-location/popup-location.css);
 @import url(../blocks/element/__heart-icon/element__heart-icon.css);
+@import url(../blocks/popup-image/__container/popup-image__container.css);
+@import url(../blocks/popup-image/popup-image.css);
+@import url(../blocks/popup-image/__close-button/popup-image__close-button.css);
+@import url(../blocks/popup-image/__picture/popup-image__picture.css);
+@import url(../blocks/popup-image/__text/popup-image__text.css);
 
 @import url(../blocks/popup/_opened/popup_opened.css);
 
