--- a/blocks/popup-image/__picture/popup-image__picture.css
+++ b/blocks/popup-image/__picture/popup-image__picture.css
@@ -1,6 +1,6 @@
 .popup-image__picture{
-  max-width: 433px;
   width: 100%;
-  max-height: 540px;
+  max-width: 75vw;
   height: 100%;
+  max-height: 75vh;
 }
