--- a/blocks/element/__heart/_active/element__heart_active.css
+++ b/blocks/element/__heart/_active/element__heart_active.css
@@ -1,3 +1,6 @@
 .element__heart_active {
   background-image: url(../../../../img/Heart_active.svg);
+  width: 22px;
+  height: 19px;
+  border: none;
 }
