сделать плавное открытие попапа

--- a/blocks/popup-image/popup-image.css
+++ b/blocks/popup-image/popup-image.css
@@ -1,5 +1,5 @@
 .popup-image {
-  display: none;
+  display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
@@ -12,3 +12,4 @@
   margin: auto;
   z-index: 1;
 }
+
