--- a/blocks/popup-location/popup-location.css
+++ b/blocks/popup-location/popup-location.css
@@ -1,5 +1,5 @@
 .popup-location {
-  display: none;
+  display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
@@ -11,4 +11,8 @@
   left: 0;
   margin: auto;
   z-index: 1;
+  transition: all 1s ease;
+  opacity: 0;
+  visibility: hidden;
 }
+
