--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-  display: none;
+  display: flex;
   flex-direction: row;
   width: 100%;
   /* height: 100%; */
@@ -12,13 +12,7 @@
   left: 0;
   margin: auto;
   z-index: 1;
-  transition: opacity 1s ease-out;
+  transition: all 1s ease;
   opacity: 0;
-  height: 0;
-  overflow: hidden;
-}
-
-popup.active {
-  opacity: 1;
-  height: auto;
+  visibility: hidden;
 }
