исправить ошибки по ревью

--- a/blocks/popup_edit-profile/__button-text/popup__button-text.css
+++ b/blocks/popup_edit-profile/__button-text/popup__button-text.css
@@ -1,4 +1,4 @@
-.popup__button-text {
+/* .popup__button-text {
   display: block;
   -webkit-margin-before: 0;
   margin-block-start: 0;
@@ -12,4 +12,4 @@
   font-size: 18px;
   color: white;
   font-family: 'Inter', Arial, sans-serif;
-}
+} */
