--- a/blocks/popup_edit-profile/__container/popup_edit-profile__container.css
+++ b/blocks/popup_edit-profile/__container/popup_edit-profile__container.css
@@ -1,4 +1,4 @@
-.popup__container {
+.popup_edit-profile__container {
   /*display: none;*/
   flex-direction: column;
   width: 100%;
@@ -19,7 +19,7 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .popup__container {
+  .popup_edit-profile__container {
     margin-top: 123px;
     max-width: 282px;
   }
