--- a/blocks/popup_edit-profile/__text/popup_edit-profile__text.css
+++ b/blocks/popup_edit-profile/__text/popup_edit-profile__text.css
@@ -1,4 +1,4 @@
-.popup__text {
+.popup_edit-profile__text {
   display: block;
   margin-block-start: 0;
   margin-block-end: 0;
@@ -16,7 +16,7 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .popup__text {
+  .popup_edit-profile__text {
     width: 238px;
   }
 }
