--- a/blocks/popup_edit-profile/__title/popup_edit-profile__title.css
+++ b/blocks/popup_edit-profile/__title/popup_edit-profile__title.css
@@ -1,4 +1,4 @@
-.popup__title {
+.popup_edit-profile__title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -14,7 +14,7 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .popup__title {
+  .popup_edit-profile__title {
     font-size: 18px;
     margin-top: 25px;
     margin-left: 22px;
