--- a/blocks/popup_edit-profile/popup_edit-profile.css
+++ b/blocks/popup_edit-profile/popup_edit-profile.css
@@ -1,14 +1,12 @@
-.popup {
+.popup_edit-profile {
   display: flex;
   flex-direction: row;
   width: 100%;
-  /* height: 100%; */
   text-align: center;
   background-color: rgba(0, 0, 0, .3);
   position: fixed;
   top: 0;
   right: 0;
-  /*bottom: 0;*/
   left: 0;
   margin: auto;
   z-index: 1;
