--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -22,3 +22,22 @@
     margin-left: 0;
   }
 }
+
+/*.profile__info>*:nth-child(1) {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    column-gap: 10px;
+  }
+
+
+  .profile__info>*:nth-child(3) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+  }
+
+  .profile__info>*:nth-child(4) {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+  }
+}
+*/
