--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -2,10 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 5%;
+  border-radius: 10px;
   max-width: 281px;
   width: 282px;
   background-color: white;
   border: 0;
-  height: 361px;
 }
